# ob1_arm

./: .gitattributes  .gitignore  .gitmodules  Pipfile  README.md  requirements.txt  setup.md
arm_urdf/urdf/: arm_urdf.xacro
ik_solvers/matlab_ik/: arm_IK.m  arm_IK_rosnode.m
ik_solvers/robot_arm_ikfast_plugin/: package.xml  update_ikfast_plugin.sh
moveit_config/config/: fake_controllers.yaml  robot.srdf  simple_moveit_controllers.yaml
moveit_config/launch/: ros_controllers.launch
moveit_configs/README/: README.md
moveit_configs/dof_5_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
moveit_configs/ob1_arm_mobile_moveit_config/: .setup_assistant  package.xml
moveit_configs/ob1_arm_moveit_config/: .setup_assistant  package.xml
moveit_configs/test_moveit_config/: .setup_assistant
ob1_arm_arm_ikfast_plugin/: package.xml  update_ikfast_plugin.sh
ob1_arm_arm_ikfast_plugin/src/: ob1_arm_arm_ikfast_moveit_plugin.cpp  ob1_arm_arm_ikfast_solver.cpp
ob1_arm_control/: CMakeLists.txt  README.md  package.xml  setup.py
ob1_arm_control/README/: README.md
ob1_arm_control/data/: 15k_ikpoints_data.pickle  (+6 more)
ob1_arm_description/: CMakeLists.txt  package.xml
ob1_arm_firmware/: README.md
ob1_arm_gazebo/: CMakeLists.txt  package.xml
ob1_arm_hw_interface/: CMakeLists.txt  default.rviz  package.xml
ob1_arm_mobile_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ob1_arm_moveit_config/: .setup_assistant  package.xml
old_arm_moveit_config/: .setup_assistant  package.xml
test_moveit_config/: .setup_assistant  package.xml
(+512 files in other folders)
